# LAview.Desktop

./: .gitmodules  CMakeLists.txt  INSTALL  README  valadoc_env
config/: CMakeLists.txt  Config.vapi  config.h.in  ws.backbone.laview.desktop.gschema.xml
cpack/: CMakeLists.txt
pkg-config/: CMakeLists.txt
po/: laview-desktop.pot
po/de/: laview-desktop.po
po/ru/: laview-desktop.po
res/: CMakeLists.txt  laview-desktop.desktop.in  laview-desktop.gresource.xml  laview-desktop.rc
src/: AboutWindow.vala  AppCore.vala  AppDirs.vala  CMakeLists.txt  MainWindow.vala  PreferencesWindow.vala  Resources.vala  Settings.vala  SubprocessDialog.vala  Utils.vala  main.vala  w32hooks.c
ui/: CMakeLists.txt
ui/glade/: CMakeLists.txt  laview-desktop.glade
