PROJECT (LAviewDesktop C)

CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (PROJECT_LOWERCASE_NAME "laview-desktop")
SET (PROJECT_DESCRIPTION "LAview Desktop Application.")

SET (MAJOR 1)
SET (MINOR 1)
SET (PATCH 5)

LIST (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/backbone)

ADD_SUBDIRECTORY (config)
ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (po)
ADD_SUBDIRECTORY (pkg-config)
ADD_SUBDIRECTORY (test)
ADD_SUBDIRECTORY (cpack)
ADD_SUBDIRECTORY (ui)
ADD_SUBDIRECTORY (res)

# enable testing
ENABLE_TESTING ()
